src/styles.css
@font-face {
  font-family: "Mistral";
  src: url("/assets/MISTRAL.TTF") format("truetype");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "Sauce Tomato";
  src: local("Sauce Tomato Regular"),
    url("assets/Sauce\ Tomato.woff") format("woff");
  font-style: normal;
  font-weight: normal;
}

body {
  font-family: "Sauce Tomato", serif;
  font-size: 36px;
}


h1 {
  font-size: 4rem;
  font-family: 'Mistral', serif;
}

h2 {
  font-size: 3rem;
}
.cart-tab {
  position: fixed;
  bottom: 20px;
  right: 20px;
  background-color: #dc3545;
  color: white;
  border: 1px solid rgb(210, 111, 121);
  border-radius: 50px;
  padding: 10px 20px;
  font-size: 26px;
  z-index: 1000;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
}

.cart-tab:hover {
  background-color: #c82333;
}

.card-title {
  font-size: 2rem;
}

.card-text {
  font-size: 1.3rem;
}

.card {
  transition: transform 0.2s ease-in-out;
}

.card:hover {
  transform: scale(1.1);
}

.card-price {
  font-family: 'Mistral', serif;
  font-size: 1.5rem;
  font-weight: bold;
  color: #dc3545;
  letter-spacing: 0.1em;
}
@media (max-width: 767px) {
  .cart-tab {
    padding: 8px 16px;
    font-size: 14px;
  }
}

